[package]
name = "cuda-persistence"
version = "0.1.0"
edition = "2021"
description = "Checkpointing, state serialization, rollback, dirty tracking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-persistence"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
